kubernetes/05-ingress-and-storage/web-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-demo
  namespace: edge-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-demo
  template:
    metadata:
      labels:
        app: web-demo
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
