kubernetes/05-ingress-and-storage/web-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-demo
  namespace: edge-demo
spec:
  ingressClassName: nginx
  rules:
    - host: web-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-demo
                port:
                  number: 80
